Fix PluginPane overflow issues

--- a/css/react-tabs.css
+++ b/css/react-tabs.css
@@ -51,5 +51,4 @@
 .react-tabs__tab-panel--selected {
   display: block;
   overflow: scroll;
-  height: 250px;
 }
